--- a/ide/ui/ide-security/src/main/resources/ide-security/views/roles/index.html
+++ b/ide/ui/ide-security/src/main/resources/ide-security/views/roles/index.html
@@ -37,26 +37,28 @@
 </head>
 
 <body ng-app="roles" ng-controller="RolesController as roles" class="view">
-	<table class="table table-striped" ng-cloak>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Location</th>
-				<th>Description</th>
-				<th width="180px">Created</th>
-				<th width="150px">Creator</th>
-				
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="next in rolesList">
-				<td>{{next.name}}</td>
-				<td>{{next.location}}</td>
-				<td>{{next.description}}</td>
-				<td width="180px">{{next.createdAt}}</td>
-				<td width="150px">{{next.createdBy}}</td>
-			</tr>
-		</tbody>
-	</table>
+	<div class="tableFixHead">
+		<table class="table table-striped" ng-cloak>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Location</th>
+					<th>Description</th>
+					<th width="180px">Created</th>
+					<th width="150px">Creator</th>
+					
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="next in rolesList">
+					<td><div class="tdSingleLine">{{next.name}}</div></td>
+					<td><div class="tdSingleLine">{{next.location}}</div></td>
+					<td><div class="tdSingleLine">{{next.description}}</div></td>
+					<td width="180px"><div class="tdSingleLine">{{next.createdAt}}</div></td>
+					<td width="150px"><div class="tdSingleLine">{{next.createdBy}}</div></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
