--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -466,7 +466,6 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .workspace {
-	/*border-top: 2px solid #edeff0;*/
 	font-weight: 300;
 	margin-top: 28px;
     position: relative;
@@ -483,18 +482,21 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .database {
-	border-top: 2px solid #edeff0;
 	font-weight: 300;
+	margin-top: 28px;
+    position: relative;
 }
 
 .repository {
-	border-top: 2px solid #edeff0;
 	font-weight: 300;
+	margin-top: 28px;
+    position: relative;
 }
 
 .registry {
-	border-top: 2px solid #edeff0;
 	font-weight: 300;
+	margin-top: 28px;
+    position: relative;
 }
 
 .lm_header .lm_controls>li {
@@ -607,4 +609,33 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	margin: 0 !important;
 	padding: 0 !important;
 	box-shadow: none;
+}
+
+.tableFixHead {
+	overflow-y: auto;
+	height: 100%;
+}
+.tableFixHead thead th {
+	position: sticky; top: -1px;
+}
+
+table  {
+	border-collapse: collapse;
+	width: 100%;
+}
+th, td {
+	padding: 8px 16px;
+}
+th {
+	background:#f7f7f7;
+}
+
+.tdSingleLine {
+	white-space: nowrap;
+	overflow: auto;
+}
+
+.extension-name {
+	color: #477ab7;
+	font-weight: 400;
 }
