search dropdown style fix

--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -543,6 +543,10 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	color: darkgray;
 }
 
+.search-dropdown {
+	height: 1.7em !important;
+}
+
 .search-box {
 	height: 23px !important;
 	margin-top: 1px !important;
