stub for the angularjs generator from a form file - #589

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -59,6 +59,7 @@
 		<module>template-application-angular</module>
 		<module>template-application-openui5</module>
 		<module>template-mobile-hello-world</module>
+		<module>template-form-builder-angularjs</module>
 	</modules>
 
 	<profiles>
