Fixed: #586 - Add a generic template for *.websocket sample

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -68,6 +68,7 @@
 		<module>template-openui5-list</module>
 		<module>template-openui5-master-detail</module>
 		<module>template-openui5-table</module>
+		<module>template-websocket</module>
 	</modules>
 
 	<profiles>
