Small statusbar fix
Signed-off-by: StanZGenchev <stanislav.genchev@sap.com>

--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -266,6 +266,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
   flex-wrap: wrap;
   width: 100%;
   margin: auto;
+  align-items: center;
 }
 .key {
   flex: 1 1 auto;
