fix: use properties for switching off modules from content profile builds

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -59,6 +59,10 @@
 		<module>template-application-ui-angular-mongodb</module>
 	</modules>
 
+	<properties>
+		<profile.phase>generate-sources</profile.phase>
+	</properties>
+
 	<profiles>
 		<profile>
 			<id>content</id>
@@ -104,7 +108,7 @@
 						<executions>
 							<execution>
 								<id>generated-sources</id>
-								<phase>generate-sources</phase>
+								<phase>${profile.phase}</phase>
 								<goals>
 									<goal>checkout</goal>
 								</goals>
