#1074 [Build] Allow each module to be build separately - Templates

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -61,6 +61,7 @@
 
 	<properties>
 		<profile.phase>generate-sources</profile.phase>
+		<license.header.location>../licensing-header.txt</license.header.location>
 	</properties>
 
 	<profiles>
